--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -1,9 +1,12 @@
 // Buttons
-#{$html} {
+// #{$html} {
     .btn {
-        border-radius: .25rem;
+        background-color: $button-bg-color;
+        border-radius: 50px;
+        color: $button-color;
         font-size: $font-size;
-        padding: $padding/2 $padding*2;
+        line-height: 1;
+        padding: $padding/1.5 $padding;
 
         &-success,
         &-primary,
@@ -16,9 +19,11 @@
 
             &:hover {
                 background-color: $button-bg-hover-color;
+                color: $button-hover-color;
             }
 
             .ra__dark & {
+                background-color: $button-bg-color-dark;
                 color: $button-color-dark;
 
                 &:hover {
@@ -35,34 +40,69 @@
         &-success {
             background-color: $button-bg-color-success;
 
+            &:hover {
+                background-color: $button-bg-hover-color-success;
+            }
+
             .ra__dark & {
                 background-color: $button-bg-color-success-dark;
                 color: $button-color-success-dark;
+
+                &:hover {
+                    background-color: $button-bg-hover-color-success-dark;
+                }
             }
         }
 
         &-primary {
             background-color: $button-bg-color-primary;
 
+            &:hover {
+                background-color: $button-bg-hover-color-primary;
+            }
+
             .ra__dark & {
                 background-color: $button-bg-color-primary-dark;
                 color: $button-color-primary-dark;
+
+                &:hover {
+                    background-color: $button-bg-hover-color-primary-dark;
+                }
             }
         }
 
         &-danger {
             background-color: $button-bg-color-danger;
 
+            &:hover {
+                background-color: $button-bg-hover-color-danger;
+            }
+
             .ra__dark & {
                 background-color: $button-bg-color-danger-dark;
+
+                &:hover {
+                    background-color: $button-bg-hover-color-danger-dark;
+                    color: $button-hover-color-danger-dark;
+                }
             }
         }
 
         &-info {
             background-color: $button-bg-color-info;
+            color: $button-color-info;
+
+            &:hover {
+                background-color: $button-bg-hover-color-info;
+                color: $button-hover-color-info;
+            }
 
             .ra__dark & {
                 background-color: $button-bg-color-info-dark;
+
+                &:hover {
+                    background-color: $button-bg-hover-color-info-dark;
+                }
             }
         }
 
@@ -73,8 +113,8 @@
                 width: auto !important;
 
                 .ra__dark & {
-                    border-color: $green;
-                    color: $green;
+                    border-color: $maroon;
+                    color: $maroon;
                 }
 
                 &:hover {
@@ -83,8 +123,8 @@
                     color: $white;
 
                     .ra__dark & {
-                        background-color: $green;
-                        border-color: $green;
+                        background-color: $maroon;
+                        border-color: $maroon;
                         color: $black;
                     }
                 }
@@ -104,7 +144,7 @@
                     color: $purple;
 
                     .ra__dark & {
-                        color: $green;
+                        color: $maroon;
                     }
                 }
 
@@ -117,8 +157,8 @@
                     color: $white;
 
                     .ra__dark & {
-                        background-color: $green;
-                        border-color: $green;
+                        background-color: $maroon;
+                        border-color: $maroon;
                         color: $black;
                     }
                 }
@@ -136,4 +176,4 @@
             }
         // } */
     }
-}
+// }
