--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -552,6 +552,17 @@ a:hover {
 .swal2-popup .swal2-styled {
   transition: all 200ms ease-in-out;
 }
+@media (max-width: 991px) {
+  #header .header-nav-main nav > ul li.dropdown .dropdown-menu,
+ul.navbar-nav > li.dropdown .dropdown-menu {
+    display: block;
+    padding-left: 2rem;
+  }
+  #header .header-nav-main nav > ul li.dropdown-log-in-out,
+ul.navbar-nav > li.dropdown-log-in-out {
+    display: none;
+  }
+}
 .row {
   margin-right: 0;
   margin-left: 0;
@@ -592,15 +603,20 @@ html #header .header-nav-links nav {
 html #header .header-nav-links nav > ul {
   width: 100%;
 }
-html #header .header-nav-links nav > ul > li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
-  margin-left: 0;
-}
-html #header .header-nav-links nav > ul > li:first-child {
-  justify-content: flex-start;
+@media (min-width: 992px) {
+  html #header .header-nav-links nav > ul > li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    margin-left: 0;
+  }
+  html #header .header-nav-links nav > ul > li:first-child {
+    justify-content: flex-start;
+  }
+  html #header .header-nav-links nav > ul > li:last-child {
+    justify-content: flex-end;
+  }
 }
 html #header .header-nav-links nav > ul > li a {
   font-family: Jomolhari;
@@ -616,8 +632,8 @@ html #header .header-nav-links nav > ul > li a:not(.btn) {
 html #header .header-nav-links nav > ul > li a i {
   margin-right: 0.5rem !important;
 }
-html #header .header-nav-links nav > ul > li:last-child {
-  justify-content: flex-end;
+html #header .header-nav-links nav > ul > li .dropdown-menu {
+  top: 70px !important;
 }
 html #header .header-nav-links nav > ul li:hover > a {
   color: #f1556c !important;
