--- a/resources/views/website/assets/sass/_init.scss
+++ b/resources/views/website/assets/sass/_init.scss
@@ -4,6 +4,10 @@
 @import '_variables';
 @import '_mixins';
 
+// Typography
+$body-font-size: 1.4rem;
+// $h1-font-size: 1.6rem;
+
 // Navigation
 $nav-link-color: $white;
 $nav-link-hover-color: $red-light;
