--- a/public/admin/assets/css/admin.css
+++ b/public/admin/assets/css/admin.css
@@ -287,6 +287,16 @@ h6 {
   text-transform: initial;
 }
 
+h1,
+h1.header-title {
+  font-size: 3rem;
+}
+
+h2,
+h2.header-title {
+  font-size: 2.4rem;
+}
+
 p {
   line-height: 1.3;
   color: #000000;
