--- a/public/website/assets/css/frontend.css
+++ b/public/website/assets/css/frontend.css
@@ -303,6 +303,16 @@ h6 {
   text-transform: initial;
 }
 
+h1,
+h1.header-title {
+  font-size: 3rem;
+}
+
+h2,
+h2.header-title {
+  font-size: 2.4rem;
+}
+
 p {
   line-height: 1.3;
   color: #000000;
@@ -574,9 +584,6 @@ html:not(.sticky-header-active) #header.header-transparent:not(.header-semi-tran
 html #header .header-body {
   background: rgba(0, 0, 0, 0.8) !important;
 }
-html #header .header-container.container {
-  max-width: 1140px !important;
-}
 html #header .header-row-log-in-out {
   flex-basis: 100%;
   padding-top: 0.5rem;
@@ -631,6 +638,13 @@ html #header .header-nav-links nav > ul > li a:not(.btn) {
 }
 html #header .header-nav-links nav > ul > li a i {
   margin-right: 0.5rem !important;
+}
+html #header .header-nav-links nav > ul > li .dropdown-item {
+  color: #ffffff;
+}
+html #header .header-nav-links nav > ul > li .dropdown-item:hover {
+  background: none;
+  color: #f1556c;
 }
 html #header .header-nav-links nav > ul > li .dropdown-menu {
   top: 70px !important;
@@ -794,88 +808,83 @@ html.sticky-header-active .header-logo img {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
-.mf__heading-3 {
-  font-size: 3rem;
-}
 .mf__separator {
-  background-color: #793B52;
-  display: inline-block;
+  background-color: #F7F2EF;
   margin: 0 auto 1rem;
-  width: 15%;
-  height: 4px;
+  width: 30%;
+  height: 1px;
 }
 .mf__separator--small {
-  width: 5%;
+  width: 10%;
 }
 .mf__homepage-video:before {
   opacity: 0.6 !important;
 }
-.mf__features__h1 {
-  font-size: 3rem;
+.mf__features h1 {
+  color: #F7F2EF;
   margin-bottom: 2rem;
   text-align: center;
 }
-.mf__features__p {
+.mf__features h2 {
+  color: #F7F2EF;
+  margin-bottom: 1rem;
+}
+.mf__features p {
+  color: #F7F2EF;
   margin-bottom: 2rem;
+}
+.mf__features p:last-child {
+  margin-bottom: 0;
 }
 .mf__features__row {
   align-items: flex-start;
-  display: flex;
-  flex-wrap: wrap;
   justify-content: flex-start;
   margin-bottom: 4rem;
-}
-@media (max-width: 599px) {
-  .mf__features__row {
-    flex-wrap: wrap;
-  }
-}
-.mf__features__row > * {
-  flex: 0 0 auto;
-}
-@media (max-width: 599px) {
-  .mf__features__row > * {
-    flex-basis: 100%;
-  }
 }
 .mf__features__row:last-child {
   margin-bottom: 0;
 }
 .mf__features__row__column {
   align-self: stretch;
-  flex-basis: 25%;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  flex-basis: calc( ( 100% / 4 ) - ( 1rem*2 ) );
+  margin: 1rem;
 }
 @media (max-width: 899px) {
   .mf__features__row__column {
-    flex-basis: 50%;
+    flex-basis: calc( ( 100% / 2 ) - ( 1rem*2 ) );
   }
 }
 @media (max-width: 599px) {
   .mf__features__row__column {
     flex-basis: 100%;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 .mf__features__row__column--first {
+  background: none;
   flex-basis: 100%;
   margin-bottom: 1rem;
   text-align: center;
 }
-.mf__features__h2 {
-  font-size: 2.4rem;
-  margin-bottom: 1rem;
-}
-.mf__features--benefits {
-  background-color: #F7F2EF;
-  margin-bottom: 2rem;
-}
 .mf__features__feature {
-  align-items: flex-start;
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  height: 100%;
-  padding: 1rem;
+  padding: 1rem 1rem;
   text-align: center;
+  /* @include for-phone-only {
+      padding-left: 0;
+  } */
+  /* &:last-of-type {
+      padding-right: 0;
+  } */
+  /* &__info {
+      height: 100%;
+  } */
 }
 @media (max-width: 599px) {
   .mf__features__feature {
@@ -890,14 +899,6 @@ html.sticky-header-active .header-logo img {
     flex-basis: 100%;
   }
 }
-@media (max-width: 599px) {
-  .mf__features__feature {
-    padding-left: 0;
-  }
-}
-.mf__features__feature:last-of-type {
-  padding-right: 0;
-}
 .mf__features__feature > * {
   flex-basis: 100%;
 }
@@ -905,7 +906,7 @@ html.sticky-header-active .header-logo img {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   max-width: 48px;
   max-height: 48px;
   width: 48px;
@@ -915,20 +916,34 @@ html.sticky-header-active .header-logo img {
   display: block;
   width: 100%;
 }
-.mf__features__feature__info {
-  height: 100%;
-}
-.mf__features__feature__heading {
-  line-height: 1.6;
-  color: #000000;
+.mf__features__feature h4 {
+  color: #F7F2EF;
   font-size: 2rem;
+  line-height: 1.6;
 }
-.mf__features__feature__heading + .mf__features__feature__copy {
-  margin-top: 2rem;
+.mf__features__feature h4 + p {
+  margin-top: 1rem;
 }
-.mf__features__feature__copy {
+.mf__features__feature p {
   font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
+  line-height: 1.5;
+}
+.mf__features--benefits {
+  background-color: #793B52;
+}
+.mf__features--services {
+  background-color: #4d5877;
+}
+.mf__features--services div.mf__features__row {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 1rem;
+}
+.mf__features--services div.mf__features__row:first-of-type {
+  margin-top: 1rem;
 }
 .mf__video {
   background-color: #F7F2EF;
@@ -967,27 +982,29 @@ html.sticky-header-active .header-logo img {
   }
 }
 .mf__register__buttons__col {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
-  flex-basis: 50%;
+  flex-basis: calc( ( 100% / 2 ) - ( 1rem*2 ) );
   height: 100%;
-  padding-right: 2rem;
-}
-.mf__register__buttons__col:last-child {
-  padding-right: 0;
-  padding-bottom: 0;
+  margin: 1rem;
+  padding: 2rem;
+  /* &:last-child {
+      padding-right: 0;
+      padding-bottom: 0;
+  } */
 }
 @media (max-width: 899px) {
   .mf__register__buttons__col {
     flex-basis: 100%;
     height: auto;
-    padding-right: 0;
-    padding-bottom: 4rem;
   }
 }
-.mf__register__buttons .mf__heading-3 {
-  line-height: 1.3;
+.mf__register__buttons h3 {
   color: #ffffff;
+  font-size: 3rem;
+  line-height: 1;
   margin-bottom: 2rem;
 }
 .mf__register__buttons__info {
@@ -1006,6 +1023,7 @@ html.sticky-header-active .header-logo img {
   display: inline-block;
   font-family: Jomolhari;
   font-weight: 700;
+  line-height: 1.5;
 }
 .mf__footer#footer {
   background: url("/website/assets/images/bg2s.jpg") no-repeat center center;
